tests/NormalTests/paczka1/small_fuzzy/25680263.err
Error in line 2: Eyv S170 21,3
Error in line 9: d2yzYU S980 29,9
Error in line 6: FwJJRtKMIh A693 29,3
